# ChangeLog for media-sound/guitarix2
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  27 Jul 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  guitarix2-0.28.1.ebuild, guitarix2-9999.ebuild:
  Use slotted dependencies on glibmm and gtkmm as suggestet by nitm at the
  Gentoo Forums.

*guitarix2-0.28.1 (21 Jul 2013)

  21 Jul 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  +guitarix2-0.28.1.ebuild, guitarix2-9999.ebuild:
  Version bump.
  Use the usex function to increase readability.

*guitarix2-0.27.1-r1 (13 Jul 2013)

  13 Jul 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  +guitarix2-0.27.1-r1.ebuild, guitarix2-9999.ebuild:
  Use python-any-r1 to build with python2.7 (build fails with python3.3,
  atleast).
  New avahi USE flag with appurtenant dependency in live ebuild.

*guitarix2-0.27.1 (20 Apr 2013)

  20 Apr 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  -files/guitarix2-0.25.2-no-ldconfig.patch,
  -files/guitarix2-0.25.2-no-update-desktop-database.patch,
  -files/guitarix2-0.25.2-respect-libdir.patch, -guitarix2-0.26.1.ebuild,
  +guitarix2-0.27.1.ebuild, -files:
  Version bump and remove old ebuild.
  Remove old patches.

*guitarix2-0.26.1 (09 Apr 2013)

  09 Apr 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  -guitarix2-0.25.2.ebuild, +guitarix2-0.26.1.ebuild, guitarix2-9999.ebuild:
  Version bump and remove old ebuild.
  Drop python and glade USE flags as those give developer only 
  functionalities. The flags can be re-added if other packages start 
  depending on this package with those functionalities.

  31 Mar 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  guitarix2-9999.ebuild, -files/guitarix2-9999-desktop-entry.patch:
  Disable live ebuild patch. It should be working upstream now.

  31 Mar 2013; Dominique Michel <dominique_libbre@users.sourceforge.net>
  guitarix2-0.25.2.ebuild, guitarix2-9999: initial support for python eclass;