@@ -1,8 +1,10 @@
 DIST guitarix2-0.27.1.tar.bz2 20608874 SHA256 9bfb26bd6615aaece69755c2a7082a4eb6ff86d503f3dbcc8ddbebc0be579139 SHA512 50f3fd14a1b5574c78d9e9e1c28a69510bd58bc701cdf2bfdfc51baa8cff450802bce4b0410140bac71fcacdb68ad04cb771a2f10bf679448bf4db1faf07c61b WHIRLPOOL 48533c76d94ad4e691f1d7b2cf2f663534ba3d93fdb662c60b663956c016e872f1c158ee3d5cb718b2045fe8fb30610578ad05ff29fc37d34fd6cd4e2018610c
 DIST guitarix2-0.28.1.tar.bz2 20152396 SHA256 3662e4582d96297474a7d5ece6dccd2c3c6f267b5e116bf19857dc67989af5ca SHA512 0113510a79f190e6ad9f0e9f882cf0951551e0594ae6074cf0ba66534cef96edd9ef7d99ebfd146a17edfe09d9bfbef56b7b9942548692aba0a0f078a8011f62 WHIRLPOOL c7deea224f65133f503d431aefa56e13c6997b5eb8d60c1588b72e62cd3ce2c0eb000b7d70a647370a311687ac86d1d421665452facf3f906d1b841c77adc1b9
+DIST guitarix2-0.28.3.tar.bz2 20361292 SHA256 4d761efb788b0b5a600810dc2a858ea6a2288c7cc4f140937498454ffd56454f SHA512 d4a9d7f95f95d896033ed90ed1eed9125485e44a1813abf59f1f8b9216e354e4ac3255473acff5e0c49784c6a8ab89bb2e52cc574573d68181f8be19642843f7 WHIRLPOOL da70347f3a3b6cbd64e2459b76f692533a7ae7e0a3cd66834105377aad1f8c08eaff946d5a5c15d23c3f6d4b94159df1d99ec860b983f1c603bbb01130a79951
 EBUILD guitarix2-0.27.1-r1.ebuild 2707 SHA256 230539de4ba351b7a69a53565a07a8a4c3a2e94e8e96fea87127509d0390396f SHA512 a7f52b8aab7f14655a995427115252a9939d3cfcba3e1e3df68765267b90dd7875ecea0a275df73cec82cfd778ddf7e7dabb554b809ce603386e32324c15d0cb WHIRLPOOL 5740ff8fda6a57842a1038bc3e18e64eabca4731c1fe2027993a24bffd0bcfe3eb32cc5f3015d0b5f09da4db9fe86060f4781768a57d27c88f497708034bf82e
 EBUILD guitarix2-0.27.1.ebuild 2666 SHA256 4ca693c0d893be2b29e6de6369dda78a7c05dc97aea828cb0a9951dbfd7220be SHA512 3355f72d61dcc23d3032197d3a732836d6f5643a59cd43d962de85f5b3ad8b618e3fcbb2f6acf6355878e907c309c54dbe37e47a00aa2d7590b5bfa224806182 WHIRLPOOL dff6cfa7c4c19eca764c9c24c2391305c22cd86a58a69ad410ef34bebffd522c23b20f180fffa98744e0e100eb6ab9db908d840836dbf0581bb5cb0a0df461bd
 EBUILD guitarix2-0.28.1.ebuild 2635 SHA256 b12a00ece238d8c73e69e94a2242ac7cacb98f6dc8c2263e26a7d26e2eeacc54 SHA512 5f2a74a6ce98fa8ca54383d4fe5cc6ccaf44c51579e62c021bba436f9938a2728086c8312fdee62049d6bd4ccd6c884a67238f3699b06bcff2bf619f092f56da WHIRLPOOL 7af819d57169039cf0ff2bdc0adbe378eea0afc1941fd639d783df524cf9e727a3bdcfab1682178a6a7ece2914582e1937388040fd4f8019b0f0e0506625ecf5
+EBUILD guitarix2-0.28.3.ebuild 2635 SHA256 b12a00ece238d8c73e69e94a2242ac7cacb98f6dc8c2263e26a7d26e2eeacc54 SHA512 5f2a74a6ce98fa8ca54383d4fe5cc6ccaf44c51579e62c021bba436f9938a2728086c8312fdee62049d6bd4ccd6c884a67238f3699b06bcff2bf619f092f56da WHIRLPOOL 7af819d57169039cf0ff2bdc0adbe378eea0afc1941fd639d783df524cf9e727a3bdcfab1682178a6a7ece2914582e1937388040fd4f8019b0f0e0506625ecf5
 EBUILD guitarix2-9999.ebuild 2629 SHA256 b018617a8ed929a5154f212c9eb60a1d5c2252371e6f9881b652b7485520954d SHA512 d31e9783547e97e35e2bc3a47b17bdbd55f6e0a7fd2f6054d9debc01324725c0cd9f95a62a6ad4c6bf39e498948409dea711b92a2074928b3384a074e1919ca2 WHIRLPOOL fcc76a60ae0ca329fb98499493eb0c47d928622e432ca8925480a080a90fd1c6be29319278c29d1eba1a3002be10c46b9deb835907003d770a165b324d06dc6e
-MISC ChangeLog 4507 SHA256 8e06519d6078e5fb180cf358bcbb590c61d5ca65fb0aeb5a31c531cfeed88d5d SHA512 e6348c41a67809fe7402e58752e3e7537ee97a3425fb058fdaac050cd81128c4a3c28498176c3a794912f1e938a4202b6d33e1fe82d9f3593367a3e683cc4cb2 WHIRLPOOL 6fd6a3460b9aee0eb5f609116c7e55494766a40e042321a4de82143d4af169f01d4873e3bd552627cbe0a5627973a1ecf7906dd3fd9316be537cc1b826d37457
+MISC ChangeLog 4640 SHA256 2bb10d519f2fd6241f0bb52b3bf0ad09b836d138ab8afa1f1b24d9448fb7c07b SHA512 12ad2d86e5f9a5db846d1ac252d95e3307ae4485026877cfc415f7f5055920ea33f0c1cd3ef06356e5f104a5f8bf4fafe10f25f4ad0958677d4df13b3d2f94ed WHIRLPOOL a1c322bd585698789f6dbdac2dd3284cb994628edb9cd3ef060685ed4d02165ee6d0c83421152ad54e56369600e5d3c4ad4c3281c4de0f668d9b249b5c976f7c
 MISC metadata.xml 642 SHA256 fef3af7ca682c1fc74f610c6afbdb908af976102a852d8bbea3616c361f2cf1d SHA512 783c6b25b865825ce1ded5d93202f5b0470da1255c33540f52e9b82d4c7d0f3eb76f643d5f06a35682ba7cd3f5dd6eb07798d8a3a247d9cc57cdc6acc9b96739 WHIRLPOOL c83234ce05b42242d307decb6dcb866ea5b02294b5da3e4901b3da47adc210f7dc50c8100d846b9b5c8a89fcaacec4f598a765f3f952fc433818d37c9beb7e1c
