@@ -2,6 +2,12 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*guitarix2-0.28.3 (23 Feb 2014)
+
+  23 Feb 2014; Matt Henley (nwmatt) <nwmatt@gmail.com>
+  +guitarix2-0.28.3.ebuild:
+  Version bump.
+
   27 Jul 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
   guitarix2-0.28.1.ebuild, guitarix2-9999.ebuild:
   Use slotted dependencies on glibmm and gtkmm as suggestet by nitm at the
